# TurTur

./: .gitignore  Cargo.toml  README.md
debughtml/: admin.html  app.html  app.js  debugchat.html  login.html  login.js
html/: admin.html  app.html  app.js  error.html  login.js  style.css
src/: chatserver.rs  db.rs  endpoints.rs  main.rs  packet_encryption.rs
src/tests/: dbtest.rs  mod.rs
